# rl-hotel

./: Cargo.toml
src/: hotelling_agent.rs  main.rs  plotter.rs  simulation.rs
